2011-05-14  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR rtl-optimization/48932
	Backport from mainline:
	2010-09-15  Eric Botcazou  <ebotcazou@adacore.com>

	PR rtl-optimization/45593
	* reorg.c (relax_delay_slots): Use emit_copy_of_insn_after to re-emit
	insns that were in delay slots as stand-alone insns.

2011-05-05  Julian Brown  <julian@codesourcery.com>

	* config/arm/neon.md (vec_set<mode>_internal): Fix misplaced
	parenthesis in D-register case.

2011-02-26  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Backport from mainline:
	2010-08-22  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR boehm-gc/34544
	* gthr-posix.h (__gthread_active_init): Delete.
	(__gthread_active_p): Do activity check here.
	Don't include errno.h on hppa-hpux.  Update comment.
	* gthr-posix95.h (__gthread_active_init): Delete.
	(__gthread_active_p): Do activity check here.
	Don't include errno.h on hppa-hpux.  Update comment.

2011-02-24  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* config.gcc (hppa[12]*-*-hpux11*): Set extra_parts.
	* config/pa/stublib.c (pthread_default_stacksize_np, pthread_mutex_lock,
	pthread_mutex_unlock, pthread_once): New pthread stubs.
	* config/pa/t-pa-hpux11: Add rules to build pthread stubs.
	* config/pa/t-pa64: Likewise.
	* config/pa/pa-hpux11.h (LINK_GCC_C_SEQUENCE_SPEC): Define.
	(LIB_SPEC): In static links, link against shared libc if not linking
	against libpthread.
	* config/pa/pa64-hpux.h (LIB_SPEC): Likewise.

2010-12-30  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* config/pa/pa.md: Add ",*" condition to 64-bit add/subtract boolean
	patterns.

2010-12-22 John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Backport from mainline:
	2010-12-18  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/46915
	* config/pa/pa.c (branch_to_delay_slot_p): Use next_active_insn instead
	of next_real_insn.  Search forward checking for both ASM_INPUT and
	ASM_OPERANDS asms until exit condition is found.